--- a/frontend/src/styles/dashboard.css
+++ b/frontend/src/styles/dashboard.css
@@ -12,12 +12,10 @@
   margin-bottom: 1rem;
 }
 
-.dashboard-paragraph {
-  font-size: 1.2rem;
-  color: #ddd;
-  text-align: center;
-  max-width: 800px;
-  margin-bottom: 2rem;
+.dashboard-image {
+  min-width: 100%;
+  height: auto;
+  margin-bottom: 1rem;
 }
 
 .test-login-button {
